# larql

./:  has no newline  .gitignore  Cargo.toml  FINDINGS.md  Makefile  PAPERS.md  README.md  attention-idea.txt  mega-kernel-transcription.txt
crates/gc-markdown/: Cargo.toml
crates/gc-markdown/src/: lib.rs
crates/larql-cli/src/: main.rs  utils.rs
crates/larql-compute/: Cargo.toml  README.md
crates/larql-compute/benches/: matmul.rs
crates/larql-compute/examples/: bench_down_transpose.rs  bench_full.rs  bench_generation.rs  bench_pipeline.rs  bench_q4.rs  bench_q4_attention.rs  bench_shaders.rs  compare_decode.rs  (+9 more)
crates/larql-inference/: Cargo.toml
crates/larql-inference/examples/: bench_draft_viability.rs  bench_e2e_hnsw.rs  bench_early_exit.rs  bench_gate_vs_activation_oracle.rs  bench_generate.rs  bench_generate_dense.rs  bench_hnsw_gate.rs  bench_hnsw_recall.rs  bench_hnsw_recall_sweep.rs  bench_interactive.rs  bench_layer_graph.rs  bench_prefill_attn.rs  bench_profile_decode.rs  bench_qkv_stacked.rs  bench_walk_decode.rs  bench_walk_ffn_only.rs  debug_decode_token_real.rs  gguf_infer.rs  memory_analysis.rs
crates/larql-inference/src/: capture.rs  gguf_pipeline.rs  lib.rs  perf.rs  sampling.rs
crates/larql-inference/src/attention/: gpu.rs  mod.rs  rope.rs
crates/larql-inference/src/ffn/: mod.rs  weight.rs
crates/larql-inference/src/forward/: layer.rs  mod.rs  predict.rs
crates/larql-inference/src/layer_graph/: draft_head.rs  generate.rs  logits.rs  mod.rs  ngram_cache.rs  pipeline_layer.rs  predict.rs  speculative.rs
crates/larql-inference/src/vindex/: walk_ffn.rs
crates/larql-llamacpp/: Cargo.toml
crates/larql-llamacpp/examples/: bench.rs  chat_repl.rs  knn_probe.rs  probe_zero.rs  scenarios.rs  skill_wizard.rs  view_session.rs
crates/larql-llamacpp/src/: backend.rs  lib.rs  pipeline.rs  probe.rs  sampling.rs
crates/larql-server/: Cargo.toml
crates/larql-server/src/: chat_log.rs  llama_probe.rs  main.rs  skill_registry.rs  state.rs
crates/larql-server/src/routes/: chat_completions.rs  generate_stream.rs  infer.rs  insert.rs  kv_cache.rs  kv_rag.rs  mod.rs  patches.rs  probe.rs  rag.rs  reset.rs  sessions.rs  skills.rs  stats.rs  vec_inject.rs
crates/larql-tui/: CLAUDE.md  Cargo.toml
crates/larql-tui/src/: annotations.rs  app.rs  draw.rs  events.rs  headless.rs  log.rs  main.rs  session.rs  skill_router.rs  skills.rs  stream.rs  system_prompt.txt  theme.rs  workflows.rs
crates/larql-vindex/: Cargo.toml
crates/spike/: Cargo.toml
docs/: cli.md  ffn-graph-layer.md  inference-engine.md  weight-extraction.md
docs/plans/: linearize-weight-reads.md  mega-kernel-s3.md  speculative-decoding.md
scenarios/01_basic_chat/: actual.txt
scenarios/02_multi_turn/: actual.txt  input.txt
scenarios/03_knn_overlay/: actual.txt  input.txt  setup.sh
scenarios/04_tool_list/: actual.txt  input.txt  setup.sh  teardown.sh
scenarios/05_agent_writes_file/: actual.txt  input.txt  post.sh  setup.sh
scenarios/06_agent_chains_write_read/: golden.txt  input.txt  post.sh  setup.sh
scripts/: capture_draft_data.py  train_draft_head.py
scripts/finetune/: augment_training_data.py  build_ft_attn.py  build_q8_vindex.py  generate_training_data.py  generate_v2.py  generate_v3.py  lora_config.yaml  lora_config_strong.yaml  train.sh
tests/: batch_insert_test.sh  bench_kv_vs_context.py  compare_insert_strategies.sh  knn_golden.sh  load_session_bookmarks.py  load_session_facts.py  rag_scenarios.sh  retrieval_neural.py  retrieval_variants.py  run_scenarios.py  test_copy_head_bf16.py  test_full_context.py  test_kv_replay.py
tests/fixtures/: expected_queries.json  knn_override_golden.tsv  knn_override_negative.tsv  rag_scenarios.json  session_transcript.json
tests/scenarios/: fact-extraction.json  knn-override.json  tool-integration.json  workflow-planning.json
(+113 files in other folders)
