[workspace]
resolver = "2"
members = [
    "crates/gc-markdown",
    "crates/larql-models",
    "crates/larql-vindex",
    "crates/larql-llamacpp",
    "crates/larql-server",
    "crates/larql-tui",
    "crates/spike",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = []
license = "Apache-2.0"
repository = "https://github.com/chrishayuk/chuk-larql-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
