[package]
name = "larql-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GGUF inference pipeline — Metal decode + sampling for the larql hot path"

[dependencies]
larql-models = { path = "../larql-models" }
larql-compute = { path = "../larql-compute" }
larql-vindex = { path = "../larql-vindex" }

# BLAS init shim for ndarray (used transitively by gguf_pipeline outputs).
blas-src = { version = "0.10", features = ["accelerate"] }

# Tokenizer (used by GgufPipeline::predict_top_k_with_knn).
tokenizers = "0.21"

# Sampling RNG (temperature + top-p).
rand = "0.9"

[features]
default = []
metal = ["larql-compute/metal"]
