[package]
name = "larql-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for vindex knowledge queries and inference"

[[bin]]
name = "larql-server"
path = "src/main.rs"

[dependencies]
larql-vindex = { path = "../larql-vindex" }
larql-models = { path = "../larql-models" }
larql-llamacpp = { path = "../larql-llamacpp" }
rusqlite = { version = "0.31", features = ["bundled"] }

axum = { version = "0.8" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["metal"]
metal = ["larql-llamacpp/metal"]
